# dynamic-b-tree-bit-vector

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
benchmark/: CMakeLists.txt  benchmark.cpp
include/: b-bv.hpp  b-node.hpp  b-spsi.hpp  bb-node.hpp  bb-spsi.hpp  be-bv.hpp  be-node.hpp  be-spsi.hpp  be.hpp  buffer_2_packed_vector.hpp  buffer_3_packed_vector.hpp  buffer_4_packed_vector.hpp  builtin.h  bv_reference.hpp  includes.hpp  libpopcnt.h  message.hpp  msvc.hpp  node.hpp  packed_vector (2).hpp  packed_vector.hpp  packed_vector2.hpp  packed_vector3.hpp  packed_vector4.hpp  packed_vector5.hpp  packed_vector6.hpp  packed_vector8.hpp  pv_reference.hpp  sdsl-bv.hpp  spsi-reference.hpp  spsi.hpp  spsi_reference.hpp  succinct-bitvector.hpp  succinct_bitvector.hpp  test-case.hpp  unbuffered_packed_vector.hpp
include/sdsl/: bits.cpp  bits.hpp  int_vector.hpp  memory_management.cpp  memory_management.hpp  ram_fs.hpp  rank_support.hpp  rank_support_v5.hpp  select_support.hpp  util.cpp  util.hpp
profiler/: CMakeLists.txt  profiler.cpp
test-case-generator/: CMakeLists.txt  test-generator.cpp
tests/: CMakeLists.txt  helpers.hpp  test.cpp
