add_executable("tests" "test.cpp")
target_include_directories("tests" PUBLIC ${googletest_SOURCE_DIR}/googletest/include/gtest)
if(UNIX)
target_link_libraries("tests" "gtest_main" "-pthread")
elseif(WIN32)
target_link_libraries("tests" "gtest_main")
endif()
include("GoogleTest")
gtest_discover_tests(tests)
